--- a/recruit.css
+++ b/recruit.css
@@ -21,7 +21,7 @@ h1 {
   background-color: #fff;
   border: 1px solid #eee;
   font-family: "Times New Roman", Serif;
-  font-size: 20px;
+  font-size: 1.25em;
   padding: 20px 30px;
   width: 100%;
 }
@@ -39,7 +39,7 @@ h1 {
   border-radius: 5px;
   border: none;
   color: #fff;
-  font-size: 16px;
+  font-size: 1em;
   padding: 10px;
 }
 
@@ -55,4 +55,22 @@ h1 {
 
 #more-btn {
   background-color: #69CC21;
+}
+
+@media (max-width: 480px) {
+  body {
+    font-size: 180%;
+  }
+  h1 {
+    margin-top: 10px;
+  }
+
+  .body {
+    margin-top: 0px;
+    padding: 10px;
+  }
+
+  #copy-btn {
+    width: 250px;
+  }
 }
