--- a/recruit.css
+++ b/recruit.css
@@ -13,8 +13,9 @@ h1 {
 }
 
 .body {
-  margin: 100px auto;
-  width: 600px;
+  margin: 100px auto 10px auto;
+  width: 80%;
+  max-width: 600px;
 }
 
 .message {
@@ -23,7 +24,6 @@ h1 {
   font-family: "Times New Roman", Serif;
   font-size: 1.25em;
   padding: 20px 30px;
-  width: 100%;
 }
 
 .message p {
@@ -41,6 +41,8 @@ h1 {
   color: #fff;
   font-size: 1em;
   padding: 10px;
+  width: 160px;
+  margin-bottom: 10px;
 }
 
 .btn:focus {
@@ -49,17 +51,19 @@ h1 {
 
 #copy-btn {
   background-color: #237AFF;
-  display: inline-block;
-  width: 160px;
 }
 
 #more-btn {
   background-color: #69CC21;
 }
 
+#credit {
+  margin-left: 10px;
+}
+
 @media (max-width: 480px) {
   body {
-    font-size: 180%;
+    /*font-size: 180%;*/
   }
   h1 {
     margin-top: 10px;
@@ -70,7 +74,7 @@ h1 {
     padding: 10px;
   }
 
-  #copy-btn {
+  .btn {
     width: 250px;
   }
 }
