--- a/recruit.css
+++ b/recruit.css
@@ -43,6 +43,11 @@ h1 {
   padding: 10px;
   width: 160px;
   margin-bottom: 10px;
+  margin-right: 5px;
+}
+
+.btn:active {
+  box-shadow: inset 0 3px 5px rgba(0,0,0,0.1);
 }
 
 .btn:focus {
@@ -53,12 +58,43 @@ h1 {
   background-color: #237AFF;
 }
 
+.tweet-btn {
+  background-color: #1b95e0;
+  color: white;
+  text-decoration: none;
+  /*font-weight: bold;*/
+  font: normal normal normal 1em/18px 'Helvetica Neue',Arial,sans-serif;
+}
+
+.tweet-btn:hover {
+  background-color: #0c7abf;
+}
+
+.tweet-btn i {
+  background: transparent 0 0 no-repeat;
+  background-image: url(/TwitterLogo_white_16x16.svg);
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  top: 4px;
+  position: relative;
+  margin-right: 3px;
+}
+/*LoVeHA*/
+
+
 #more-btn {
   background-color: #69CC21;
 }
 
 #credit {
   margin-left: 10px;
+}
+
+.timeline-container {
+  width: 100%;
+  text-align: center;
+
 }
 
 @media (max-width: 480px) {
@@ -76,6 +112,11 @@ h1 {
   }
 
   .btn {
-    width: 250px;
+    display: inline-block;
+    width: 100%;
+  }
+
+  .tweet-btn {
+    padding: 10px 0;
   }
 }
